# focus

./: index.html  package.json  pnpm-lock.yaml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  hosts.rs  lib.rs  process.rs  session.rs  tray.rs
src/components/: BlockedApps.tsx  BlockedWebsites.tsx  Button.tsx  ConfirmEndModal.tsx  DurationPicker.tsx  Input.tsx  NameModal.tsx  SessionView.tsx  SessionsList.tsx
src/hooks/: useEarlyStopCounter.ts
